feat(refresh_rate): update layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,11 +10,13 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">刷新率</string>
     <string name="menu_slideshow">Slideshow</string>
-    <string name="usage">1. 显示与亮度 - 更多 - 屏幕刷新率，选智能切换\n2. 点击 `设置刷新率` 按钮\n设置一次如果无效请从第 1 步重新做\n原理就是把两个控制刷新率的值设置的特别小就可以了，推荐设置30，稳定会卡到最高帧率去</string>
-    <string name="set_hz">设置刷新率</string>
-    <string name="go_setting">显示与亮度</string>
-    <string name="go_dev">开发者选项</string>
+    <string name="settings_usage">1. 显示与亮度 - 更多 - 屏幕刷新率，选智能切换\n2. 点击 `设置刷新率` 按钮</string>
+    <string name="usage">设置一次如果无效请从第 1 步重新做\n原理就是把两个控制刷新率的值设置的特别小就可以了，推荐设置30，稳定会卡到最高帧率去</string>
+    <string name="set_hz">应用</string>
+    <string name="go_setting">设置 - 显示与亮度</string>
+    <string name="go_dev">开发者选项 - 去开启帧率显示</string>
     <string name="text_boot">开机自启</string>
     <string name="preference_file_key">settings</string>
     <string name="settings_boot">settings_boot</string>
+    <string name="_30">30</string>
 </resources>
